--- a/layouts/shortcodes/text_rotate.html
+++ b/layouts/shortcodes/text_rotate.html
@@ -1,4 +1,4 @@
-{{/*  
+{{- /*  
 Makes a rotation animation for a text.
 
 
@@ -9,47 +9,47 @@ time_offset = (float) Offset on which the animation starts (useful for making as
 delay = (float) Delay time for each char. Default: 0.05 (s)
 scale = (float) Scale animation. Default: 1.4
 spin = (float) Spin multiplicator. Default: 1.0 (1 perfect turn)
-*/}}
+*/ -}}
 
-{{/*  REFACTOR rotate  */}}
-{{ $chars := split (.Get "text") "" }}
-{{ $animation_time := float ((.Get "time") | default 1) }}
-{{ $time_offset := float ((.Get "time_offset") | default 0.0) }}
-{{ $rawFrequency := float ((.Get "delay") | default .1) }}
-{{ $frequency := mul (math.Abs $rawFrequency) -1 }}
-{{ $scale := float ((.Get "scale") | default 1.4) }}
-{{ $spin_multiplicator := float ((.Get "spin") | default 1.0) }}
-
-
-{{ $scale_property := printf "--rotate-scale:%f" $scale}}
-{{ $spin_property := printf "--rotate-spin:%f" $spin_multiplicator}}
-{{ $css_properties := slice $scale_property $spin_property}}
-{{ $css_properties_string := delimit $css_properties ";" }}
+{{- /*  REFACTOR rotate  */ -}}
+{{- $chars := split (.Get "text") "" -}} 
+{{- $animation_time := float ((.Get "time") | default 1) -}} 
+{{- $time_offset := float ((.Get "time_offset") | default 0.0) -}} 
+{{- $rawFrequency := float ((.Get "delay") | default .1) -}} 
+{{- $frequency := mul (math.Abs $rawFrequency) -1 -}} 
+{{- $scale := float ((.Get "scale") | default 1.4) -}} 
+{{- $spin_multiplicator := float ((.Get "spin") | default 1.0) -}} 
 
 
-{{ $speed_sign := -1 }}
-{{ if lt $rawFrequency 0.0 }}
-	{{ $speed_sign = 1 }}
-{{ end }}
+{{- $scale_property := printf "--rotate-scale:%f" $scale}}
+{{- $spin_property := printf "--rotate-spin:%f" $spin_multiplicator}}
+{{- $css_properties := slice $scale_property $spin_property}}
+{{- $css_properties_string := delimit $css_properties ";" -}} 
 
 
-{{$output := printf "<span class='rotation-letters' style='%s;'>" ($css_properties_string) }}
+{{- $speed_sign := -1 -}} 
+{{- if lt $rawFrequency 0.0 -}} 
+	{{- $speed_sign = 1 -}} 
+{{- end -}} 
+
+
+{{- $output := printf "<span class='rotation-letters' style='%s;'>" ($css_properties_string) -}} 
 {{- range $index, $char := $chars -}}
-	{{ $delay := mul $index ($frequency) }}
-	{{ $delay := mul $delay $speed_sign }}
-	{{ $delay = add $delay $time_offset }}
+	{{- $delay := mul $index ($frequency) -}} 
+	{{- $delay := mul $delay $speed_sign -}} 
+	{{- $delay = add $delay $time_offset -}} 
 
-	{{/*  NOTE THIS ADDS WHITESPACES!  */}}
-	{{/*  INFO  https://discourse.gohugo.io/t/hugo-range-function-adds-extra-whitespace-between-spans/33219 */}}
-	{{/*  <span class="wavy-text" style="animation-duration:{{$animation_time}}s; animation-delay: {{$delay | safeCSS}}s; --y-wave-translate-min:{{$min_y}}px; --y-wave-translate-max:{{$max_y}}px;">{{- $char -}}</span>  */}}
-	{{if eq $char " "}}
-		{{ $output = printf "%s<span style='display: inline;'> </span>" ($output | safeHTMLAttr) }}
-	{{ else }}
-		{{ $output = printf "%s<span style='animation-duration:%fs; animation-delay:%fs;'>%s</span>" $output $animation_time ($delay) $char }}
-	{{ end }}
+	{{- /*  NOTE THIS ADDS WHITESPACES!  */ -}}
+	{{- /*  INFO  https://discourse.gohugo.io/t/hugo-range-function-adds-extra-whitespace-between-spans/33219 */ -}}
+	{{- /*  <span class="wavy-text" style="animation-duration:{{$animation_time}}s; animation-delay: {{$delay | safeCSS}}s; --y-wave-translate-min:{{$min_y}}px; --y-wave-translate-max:{{$max_y}}px;">{{- $char -}}</span>  */ -}}
+	{{- if eq $char " " -}}
+		{{- $output = printf "%s<span style='display: inline;'> </span>" ($output | safeHTMLAttr) -}} 
+	{{- else -}} 
+		{{- $output = printf "%s<span style='animation-duration:%fs; animation-delay:%fs;'>%s</span>" $output $animation_time ($delay) $char -}} 
+	{{- end -}} 
 {{- end -}}
 
-{{ $output = printf "%s</span>" $output}}
+{{- $output = printf "%s</span>" $output -}}
 
-{{/*  To avoid whitespaces in HTML  */}}
-{{ $output | safeHTML }}
+{{- /*  To avoid whitespaces in HTML  */ -}}
+{{- $output | safeHTML -}} 
