--- a/layouts/shortcodes/get_social.html
+++ b/layouts/shortcodes/get_social.html
@@ -1,4 +1,4 @@
-{{/*  
+{{- /*  
 Returns a link for a social defined in social_sites.json
 
 Use:
@@ -8,59 +8,55 @@ Example:
 {{< get_social_url INSTAGRAM>}} -> Is not case sensitive
 {{< get_social_url twitter true>}} -> returns icon
 {{< get_social_url twitter false >}} -> do NOT returns the icon/logo
-  */}}
+  */ -}}
 
-{{ $social_platform := .Get 0 | lower }}
+{{- $social_platform := .Get 0 | lower -}}
 
-{{ $socials := .Site.Data.social_sites }}
-{{ $data := index $socials $social_platform }}
+{{- $socials := .Site.Data.social_sites -}}
+{{- $data := index $socials $social_platform -}}
 
-{{ if not $data }}
-  {{ errorf "Social platform '%s' not found in social_sites.json [at 'get_social %s']" (.Get 0) (.Get 0) }}
-{{ end }}
+{{- if not $data -}}
+  {{- errorf "Social platform '%s' not found in social_sites.json [at 'get_social %s']" (.Get 0) (.Get 0) -}}
+{{- end -}}
 
-{{ $a_class := "button four"}}
+{{- $a_class := "button four"}}
 
-{{/*  {{ $show_icon := and (.Get 1) (eq (.Get 1) true)}}  */}}
-{{/*  If (.Get 1) is empty or undefined, "true" will be used as the default.  */}}
-{{ $show_icon := .Get 1 | default true}}
+{{- /*  {{- $show_icon := and (.Get 1) (eq (.Get 1) true)}}  */ -}}
+{{- /*  If (.Get 1) is empty or undefined, "true" will be used as the default.  */ -}}
+{{- $show_icon := .Get 1 | default true}}
 
-{{ if $show_icon }}
+{{- if $show_icon -}}
 
-	{{/*  {{ $svg_css_style := 'style="display: inline-block; width: 24px; height: 24px;" fill="currentColor"'}}  */}}
-	{{ $svg_css_style := "style='display: inline-block; width: 24px; height: 24px;'" | safeHTMLAttr}}
-	{{ $svg_config := "fill='currentColor'" | safeHTMLAttr}}
-	{{ if $data.viewBox }}
-		{{/*  {{ $svg_css_style = printf "style='display: inline-block; width: 24px; height: 24px;' fill='currentColor' viewBox=%s" $data.viewBox | safeCSS}}  */}}
-		{{/*  {{ $svg_config = printf "fill='currentColor' viewBox=%s" $data.viewBox | safeHTMLAttr}}  */}}
-		{{ $svg_config = printf "fill='currentColor' viewBox='%s'" $data.viewBox | safeHTMLAttr}}
-	{{ end }}
+	{{- /*  {{- $svg_css_style := 'style="display: inline-block; width: 24px; height: 24px;" fill="currentColor"'}}  */ -}}
+	{{- $svg_css_style := "style='display: inline-block; width: 24px; height: 24px;'" | safeHTMLAttr}}
+	{{- $svg_config := "fill='currentColor'" | safeHTMLAttr}}
+	{{- if $data.viewBox -}}
+		{{- /*  {{- $svg_css_style = printf "style='display: inline-block; width: 24px; height: 24px;' fill='currentColor' viewBox=%s" $data.viewBox | safeCSS}}  */ -}}
+		{{- /*  {{- $svg_config = printf "fill='currentColor' viewBox=%s" $data.viewBox | safeHTMLAttr}}  */ -}}
+		{{- $svg_config = printf "fill='currentColor' viewBox='%s'" $data.viewBox | safeHTMLAttr}}
+	{{- end -}}
 
-	{{/*  <p>CONFIG: {{$svg_config}}</p>  */}}
-	{{/*  <a href="{{$data.url}}">{{$data.nick}}</a>  */}}
-	{{ if $data.svg_content }}
-		{{/*  <a href="{{$data.url}}"><svg style="display: inline-block; width: 24px; height: 24px;" fill="currentColor" viewBox="{{$data.viewBox}}">{{$data.svg_content}}</svg>{{$data.nick}}</a>  */}}
-		{{/*  <a href="{{$data.url}}"><svg {{$svg_css_style | safeCSS}}>{{$data.svg_content}}</svg>{{$data.nick}}</a>  */}}
-		<a href="{{$data.url}}" class={{$a_class}}>
-			<svg {{$svg_css_style }} {{ $svg_config }}>{{$data.svg_content | safeHTML }}</svg> {{$data.nick}}
+	{{- /*  <p>CONFIG: {{$svg_config}}</p>  */ -}}
+	{{- /*  <a href="{{$data.url}}">{{$data.nick}}</a>  */ -}}
+	{{- if $data.svg_content -}}
+		{{- /*  <a href="{{$data.url}}"><svg style="display: inline-block; width: 24px; height: 24px;" fill="currentColor" viewBox="{{$data.viewBox}}">{{$data.svg_content}}</svg>{{$data.nick}}</a>  */ -}}
+		{{- /*  <a href="{{$data.url}}"><svg {{$svg_css_style | safeCSS}}>{{$data.svg_content}}</svg>{{$data.nick}}</a>  */ -}}
+		<a href="{{- $data.url -}}" class={{- $a_class -}}>
+			<svg {{$svg_css_style -}} {{- $svg_config -}}>{{$data.svg_content | safeHTML -}}</svg> {{- $data.nick -}}
 		</a>
-	{{ else }}
+	{{- else -}}
 		<a href="{{$data.url}}" class="{{$a_class}}">
-		{{/*  <svg style="display: inline-block; width: 24px; height: 24px;" fill="currentColor" viewBox="{{$data.viewBox}}">  */}}
-		{{/*  <svg {{ $svg_css_style | safeCSS }}>  */}}
-		<svg {{ $svg_css_style }} {{ $svg_config }}>
-		{{ range $data.svg_paths}}
-			<path
-			fill-rule="evenodd"
-			d="{{ . }}"
-			clip-rule="evenodd"
-			></path>
-		{{ end }}
-		</svg> {{$data.nick}}</a>
-	{{ end }}
+		{{- /*  <svg style="display: inline-block; width: 24px; height: 24px;" fill="currentColor" viewBox="{{$data.viewBox}}">  */ -}}
+		{{- /*  <svg {{- $svg_css_style | safeCSS -}}>  */ -}}
+		<svg {{$svg_css_style}} {{$svg_config}}>
+		{{- range $data.svg_paths -}}
+			<path fill-rule="evenodd" d="{{- . -}}" clip-rule="evenodd"></path>
+		{{- end -}}
+		</svg> {{- $data.nick -}}</a>
+	{{- end -}}
 
-{{ else }}
-	{{/*  Do not show icon  */}}
-	<a href="{{$data.url}}" class="{{$a_class}}">{{$data.nick}}</a>
-{{ end }}
+{{- else -}}
+	{{- /*  Do not show icon  */ -}}
+	<a href="{{- $data.url -}}" class="{{- $a_class -}}">{{- $data.nick -}}</a>
+{{- end -}}
 
