articles folder in partial

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -12,6 +12,6 @@
     {{/*  </section>  */}}
   {{ partial "featured-galleries.html" . }}
   {{ if .Site.Params.show_featured_articles }}
-    {{ partial "featured-articles.html" . }}
+    {{ partial "articles/featured-articles.html" . }}
   {{ end }}
 {{ end }}
