--- a/layouts/partials/articles/featured-articles.html
+++ b/layouts/partials/articles/featured-articles.html
@@ -75,7 +75,7 @@ If the user don't want it to appear in the feature, they always can remove the f
 		{{ range $featured_albums }}
 			{{/*  {{ partial "album-card.html" . }}  */}}
       {{/*  <a class="category-tag" href="{{.RelPermalink}}">  */}}
-        {{ partial "featured-article-card.html" . }}
+        {{ partial "articles/featured-article-card.html" . }}
       {{/*  <p>Article title:  {{.Title}}</p>  */}}
 		{{ end }}
 	</section>
