--- a/layouts/partials/related-articles.html
+++ b/layouts/partials/related-articles.html
@@ -13,9 +13,9 @@
     {{ range . }}
       {{/*  <h1>{{.Title}}</h1>  */}}
 	  {{/*  <a href="{{.RelPermalink}}">{{.Title}}</a>  */}}
-	  {{/*  TODO hacer un article-card.html  */}}
+	  {{/*  TODO hacer un articles/article-card.html  */}}
       {{/*  {{ partial "album-card.html" . }}  */}}
-      {{ partial "article-card.html" . }}
+      {{ partial "articles/article-card.html" . }}
     {{ end }}
   </section>
 {{ end }}
