--- a/layouts/partials/tags/render-single-tag.html
+++ b/layouts/partials/tags/render-single-tag.html
@@ -5,8 +5,8 @@
 <section class="galleries">
   {{ range where .Pages "Params.private" "ne" true }}
     {{/*  {{ partial "album-card.html" . }}  */}}
-    {{ partial "article-card.html" . }}
-    {{/*  {{ partial "articles/article-card.html" . }}  */}}
+    {{ partial "articles/article-card.html" . }}
+    {{/*  {{ partial "articles/articles/article-card.html" . }}  */}}
   {{ end }}
 </section>
 
