--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -1,4 +1,9 @@
 
+// $articles-description-height: 70px;
+$articles-description-height: 90px;
+$featured-title-size: 1.4em;
+$info-box-brightness: 50%;
+
 
 .featured-article{
 	& p{
@@ -43,6 +48,280 @@
 		  }
 	}
 }
+
+
+.featured-article-big{
+
+	// position: inherit;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	// height: 50%;
+	// width: 300px;
+	// height: 300px;
+	// flex-direction: column;
+	// margin-left: 0px;
+	// padding-left: 0px;
+	// width: 70%;
+	// display: block;
+	// text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--hover-color), 0 0 40px var(--hover-color), 0 0 50px var(--hover-color), 0 0 60px var(--hover-color), 0 0 70px var(--hover-color);
+	border: 2px 10px solid $main_color;
+	// padding: .5em 1em;
+	// background-color: pink;
+	border-radius: 3px 3px 3px 3px;
+	// border-radius: 10px 10px 0 0;
+
+	-webkit-border-radius: 3px 3px 3px 3px;
+	-moz-border-radius: 3px 3px 3px 3px;
+	// border-left: 5px solid $soft_color;
+	// border-bottom: 5px solid $soft_color;
+
+	// box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+	box-shadow: rgba(0, 0, 0, 0.74) 0px 3px 8px;
+	// box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+	transition: box-shadow .2s;
+	transition-duration: .7s;
+	// transition: transform 1.4s;
+	transition: transform .6s;
+
+
+
+	.reading-time{
+		// color: pink;
+		// color: transparent;
+		position: absolute;
+		font-weight: 900;
+		// right: 0px;
+		// top: -20px;
+		padding: 6px 7px;
+		top:0px;
+		left:0px;
+		transition-duration: .4s;
+		height: 30px;
+		// transform: translateY(calc(var(--is-article-hovered, 0) * -59px));
+		transform: translateY(calc((1 - var(--is-article-hovered, 0)) * -59px));
+		opacity: calc(var(--is-article-hovered, 0) * 1.0);
+		// transform: translateY(59px);
+		svg, p, span {
+			display: inline-block;
+			color: var(--text-2-dark);
+			// display: flex;
+			// color: red;
+		}
+	}
+
+	// height: fit-content;
+	& time{
+		color: var(--text-2);
+		// height: 100%;
+		// display: inline-block;
+		// position: absolute;
+			// height: 30px;
+		// margin-top: auto;
+		// bottom: 0px;
+	}
+
+	// & img{
+	// 	position: relative;
+    //     // width: 250px;
+    //     // height: 300px;
+    //     overflow: hidden;
+	// 	transition: all 0.6s;
+	// 	&:hover{
+	// 		filter: blur(10px);
+	// 	}
+	// }
+
+	& > article{
+		width: 100%;
+		height: 100%;
+		max-height: 350px;
+		// aspect-ratio: 3/2;
+		aspect-ratio: 2/2.5;
+		position: inherit;
+
+		// height: 60%;
+	}
+
+	&:hover{
+		--is-article-hovered: 1;
+		--article-brightness: 100%;
+		// border-left: 5px solid $main_color;
+		// border-bottom: 5px solid $main_color;
+		// box-shadow: rgba(0, 0, 0, 0.35) 1.95px 4px 5.6px;
+		// box-shadow: rgba(0, 0, 0, 0.94) 0px 3px 10px;
+		box-shadow: rgba(0, 0, 0, 0.94) 0px 5px 10px;
+
+		transition-duration: .2s;
+
+		// filter: blur(5px);
+
+		// @extend .bloom-shadow;
+		// color: $main_color;
+
+		transform: rotateZ(var(--rand-rotation, 0));
+		transition: transform .4s;
+		& .image-container {
+			filter: brightness(50%) blur(3px);
+		}
+
+		& .hover-underline-animation::after {
+			transform: scaleX(1);
+			transform-origin: bottom left;
+		  }
+	}
+
+
+	& .image-container {
+		overflow: hidden;
+		transition-duration: 1s;
+
+		width: 100%;
+		height: 100%;
+		
+	}
+	& .image-container img{
+		transition: all .4s;
+		// overflow: hidden;
+		width: 100%;
+		height: 100%;
+		// height: 100px;
+		// background-color: red;
+		object-fit: cover;
+		// object-fit: fill;
+
+		&:hover{
+			// transform: scale(1.5);
+			transform: scale(1.0);
+		}
+	}
+
+	& > article .article-info{
+		// background-color: pink;
+		// background-color: rgba(59, 59, 59, 0.637);
+		// overflow: hidden;
+		overflow: visible;
+		position: absolute;
+		// bottom: 0;
+		width: 100%;
+		// height: 100%;
+		// top: 0;
+		bottom: 0%;
+		// top: 50%;
+  		// left: 50%;
+		// top: 0;
+		// z-index: 1;
+		// filter: blur(10px);
+		// backdrop-filter: blur(2px);
+		// backdrop-filter: blur(2px)  brightness(57%);
+		backdrop-filter: blur(2px)
+				//  brightness(calc(var(--is-article-hovered, 0) * 57%));
+				//  brightness(calc(100% - (1 - (var(--is-article-hovered, 0)) * 40%)));
+				 brightness(var(--article-brightness, #{$info-box-brightness}));
+				//  brightness(calc(100% - 40%));
+		// opacity: calc((1 - var(--is-article-hovered, 0) * 1));
+		transition: all .3s;
+
+		// transform: translateY(calc(30px*(1-var(--is-article-hovered, 0))));
+		// transform: translateY(calc(30px*(1-var(--is-article-hovered, 0))));
+		// transform: translateY(calc((1 - var(--is-article-hovered, 0))*70px));
+		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height} + #{$featured-title-size})  ));
+		transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height}  )));
+		// transform: translateY(calc(var(--is-article-hovered, 0)*30px));
+		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * 30px));
+
+		// transform: translateY(calc(2*30px));
+		.title{
+			// background-color: red;
+			// color: red;
+			left: 0px;
+			text-align: left;
+			// margin: 20px 10px;
+			margin: 10px 10px;
+			font-size: $featured-title-size;
+		}
+
+		.description{
+			// color: pink;
+			height: $articles-description-height;
+			// text-overflow: ellipsis;
+			// white-space: nowrap;
+			// visibility: hidden;
+			// display: none;
+			overflow: hidden;
+			display: -webkit-box;
+			-webkit-line-clamp: 3; /* Adjust based on line height */
+			-webkit-box-orient: vertical;
+		}
+
+
+	}
+
+	// & article .article-time-box{
+	// article .article-time-box{
+	.article-time-box{
+		background-color: var(--hover-color);
+		// background-color: rgba(var(--hover-color), 100);
+		backdrop-filter: blur(7px);
+		// overflow: visible;
+		// color: pink;
+		display: block;
+		// width: 30%;
+		padding: .8em;
+		position: absolute;
+		// top: 0;
+		// right: 0;
+		// transition: transform .3s ease-out;
+		// transition: transform .3s cubic-bezier(0,1.95,1,.39);
+		// transition: transform .3s cubic-bezier(0,1.95,1,1.2);
+		// transition: transform .3s cubic-bezier(.6,.23,.72,1.45);
+		// https://cubic-bezier.com/#.25,1.5,.46,.95
+		// transition: transform .6s cubic-bezier(.25,1.5,.46,.95);
+		// transition: transform .6s cubic-bezier(.25,1.5,.17,.69);
+		// transition: transform .4s ease-in-out;
+		transition: all .4s ease-in-out;
+		transform: translateY(calc((1 - var(--is-article-hovered, 0))*-8em));
+
+		// transition-duration: 10s;
+		opacity: calc(var(--is-article-hovered, 0) * 1.0);
+
+		top: 0%;
+		right: 0%;
+		// border-radius: 0% 100% 0% 100% / 69% 0% 100% 31% ;
+		// height: 100%;
+		h1,h2,h3{
+			color: var(--text-1-dark);
+		}
+		h1{
+			font-size: 1.5em;
+			// color:red;
+		}
+		h3{
+			font-size: 1em;
+		}
+	}
+
+	.article-time-simple{
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		padding: 6px 7px;
+		font-weight: 900;
+		// h1{
+		// 	font-size: 1.0em;
+		// }
+
+		// transform: translateY(calc((1 - var(--is-article-hovered, 0))*-8em));
+		// opacity: calc(var(--is-article-hovered, 0) * 1.0);
+		transform: translateY(calc((1 - var(--is-article-hovered, 0)) * -59px));
+		opacity: calc(var(--is-article-hovered, 0) * 1.0);
+
+		transition-duration: .4s;
+	}
+}
+
 
 .featured-articles-container{
 	display: flex;
