article-card-hover-brightness

--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -3,6 +3,7 @@
 $articles-description-height: 90px;
 $featured-title-size: 1.4em;
 $info-box-brightness: 50%;
+$article-card-hover-brightness: 30%;
 
 
 .featured-article{
