--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -87,6 +87,8 @@ $article-card-hover-brightness: 30%;
 	// transition: transform 1.4s;
 	transition: transform .6s;
 
+	max-height: 350px;
+	aspect-ratio: 2/2.5;
 
 
 	.reading-time{
@@ -135,16 +137,6 @@ $article-card-hover-brightness: 30%;
 	// 	}
 	// }
 
-	& > article{
-		width: 100%;
-		height: 100%;
-		max-height: 350px;
-		// aspect-ratio: 3/2;
-		aspect-ratio: 2/2.5;
-		position: inherit;
-
-		// height: 60%;
-	}
 
 	&:hover{
 		--is-article-hovered: 1;
@@ -199,7 +191,7 @@ $article-card-hover-brightness: 30%;
 		}
 	}
 
-	& > article .article-info{
+	& .article-info{
 		// background-color: pink;
 		// background-color: rgba(59, 59, 59, 0.637);
 		// overflow: hidden;
