--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -2,6 +2,7 @@
 // $articles-description-height: 70px;
 $articles-description-height: 90px;
 $featured-title-size: 1.4em;
+$tag-container-size: 35px;
 $info-box-brightness: 50%;
 $article-card-hover-brightness: 30%;
 
@@ -201,7 +202,8 @@ $article-card-hover-brightness: 30%;
 		width: 100%;
 		// height: 100%;
 		// top: 0;
-		bottom: 0%;
+		// bottom: 0%;
+		bottom: calc(var(--is-article-hovered, 0) * #{$tag-container-size});
 		// top: 50%;
   		// left: 50%;
 		// top: 0;
@@ -221,7 +223,9 @@ $article-card-hover-brightness: 30%;
 		// transform: translateY(calc(30px*(1-var(--is-article-hovered, 0))));
 		// transform: translateY(calc((1 - var(--is-article-hovered, 0))*70px));
 		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height} + #{$featured-title-size})  ));
+		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height}  )));
 		transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height}  )));
+		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height} + #{$tag-container-size} )));
 		// transform: translateY(calc(var(--is-article-hovered, 0)*30px));
 		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * 30px));
 
@@ -250,6 +254,55 @@ $article-card-hover-brightness: 30%;
 		}
 
 
+	}
+
+	.tag-container{
+		// display: inline-block;
+		// width: 100%;
+		// height: 100%;
+		// background-color: pink;
+		position: absolute;
+		// position: relative;
+		// height: 50px;
+		height: #{$tag-container-size};
+		// width: 100%;
+		padding-left: 10px;
+		// z-index: 2;
+		// top: 0px;
+		// top: 50%;
+		// bottom: 150px;
+		// bottom: -40px;
+		bottom: 0px;
+		a {
+			color: var(--text-2-dark);
+			// border-color: var(--text-2-dark) !important;
+			// border-color: var(--border-dark) !important;
+			border-color: var(--border-dark);
+			// border-color: red !important;
+			&:hover{
+				border-color: var(--hover-color) !important;
+				color: var(--hover-color) !important;
+				
+			}
+		}
+
+		span {
+			position: relative;
+			// background-color: red;
+			display: inline-block;
+		}
+		
+		.featured-tag{
+			font-size: 0.78em;
+			margin-right: 3px;
+			transition-delay: var(--transition-delay, 0s);
+			transition-property: transform;
+			// position: absolute;
+			// bottom: -20px;
+			// left: 0px;
+			// background-color: pink;
+			transform: translateY(calc(var(--is-article-hovered, 0) * -100px + 100px));
+		}
 	}
 
 	// & article .article-time-box{
@@ -315,6 +368,32 @@ $article-card-hover-brightness: 30%;
 	}
 }
 
+// DELETE NOT USED
+
+// .tag-container {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	gap: 0.5rem; /* optional: adds spacing between tags */
+//   }
+
+//   .featured-articles-container::after, .featured-articles-container::before {
+// 	content: none !important;
+// 	display: none !important;
+//   }
+//   .featured-article-big::after, .featured-article-big::before {
+// 	content: none !important;
+// 	display: none !important;
+//   }
+  
+// a.featured-article-tag {
+// 	display: inline-block; /* or block, if needed */
+// 	background-color: #f3f3f3; /* for visibility */
+// 	padding: 0.2rem 0.5rem;
+// 	border-radius: 4px;
+// 	font-size: 0.875rem;
+// 	text-decoration: none;
+// 	color: #333;
+// }
 
 .featured-articles-container{
 	display: flex;
