.reading-time z-index

--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -96,6 +96,7 @@ $article-card-hover-brightness: 30%;
 		// color: pink;
 		// color: transparent;
 		position: absolute;
+		z-index: 1;
 		font-weight: 900;
 		// right: 0px;
 		// top: -20px;
