article-card refactor

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -202,6 +202,7 @@ sup.tag-count{
 // TODO cambiar el nombre, las cards de las galleries también tienen esta clase y fastidia su visualización
 // .card {
 .card-article {
+	flex: 0 0 clamp(200px, 400px, 90vmin);
 //   --blur: 16px;
   --blur: 10px;
 //   --size: clamp(300px, 50vmin, 600px);
@@ -321,6 +322,8 @@ background: linear-gradient(0deg, rgba(0,0,0,1.0) 0%, rgba(0,0,0,0.6110644941570
 	bottom: 20%;
 	font-size: 2em;
 	text-shadow: 0px 3px 4px #000;
+	display: block;
+	text-align: left;
 }
 
 .card__date{
